<resources>
    <string name="app_name">Ecole des Loustics</string>

    <!--- Page d'accueil -->
    <string name="a_bienvenue">Bienvenue dans l\'application de l\'Ecole des Loustics !</string>
    <string name="a_choix_compte">Sélectionne ton compte</string>
    <string name="a_creer_compte">Crée un nouveau compte</string>

    <!--- Créer un compte -->
    <string name="c_prenom">Prénom</string>
    <string name="c_nom">Nom de famille</string>
    <string name="c_avatar_choix">Choisis ton avatar</string>
    <string name="c_avatar_changement">Changer d\'avatar</string>

    <!--- Validation d'un compte -->
    <string name="v_erreur">Erreur ! le compte n\'a pas été créé !</string>
    <string name="v_bienvenue">Bienvenue</string>

    <!--- Page de choix de l'avatar -->
    <string name="av_choix">Choisis une image puis appuie sur \"valider\".</string>

    <!--- Liste des exercices par matières -->
    <string name="l_texte">Liste des matières disponibles</string>
    <string name="l_mathematiques">Mathématiques</string>
    <string name="l_culture">Culture générale</string>

    <!--- Page d'accueil des mathématiques -->
    <string name="am_addition">Addition</string>
    <string name="am_soustraction">Soustraction</string>
    <string name="am_multiplication">Multiplication</string>
    <string name="am_division">Division</string>

    <!--- Mathématiques -->
    <string name="ad_consigne">Choisis la table d\'addition que tu veux réviser.</string>
    <string name="m_consigne">Choisis la table de multiplication que tu veux réviser.</string>
    <string name="d_consigne">Choisis la table de division que tu veux réviser.</string>
    <string name="s_consigne">Choisis la table de soustraction que tu veux réviser.</string>
    <string name="ad2_ex_maths">Mathématiques</string>

    <!--- Boutons généraux -->
    <string name="b_valider">Valider</string>
    <string name="b_accueil">Retour à la page d\'accueil</string>
    <string name="b_exercices">Choisir un exercice</string>
    <string name="b_annuler">Annuler</string>

    <!--- Textes généraux -->
    <string name="t_exos">Choisis un exercice</string>
</resources>
