<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="isauze.ma_super_appli_scolaire.maths_accueil"
    android:background="@drawable/mulan_f">

    <LinearLayout
        android:id="@+id/l_accueil_maths"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="0dp"
        android:layout_centerInParent="true">

        <TextView
            android:id="@+id/am_texte_accueil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:text="@string/t_exos"
            android:padding="@dimen/interieur"
            android:layout_margin="@dimen/exterieur"
            />

        <Button
            android:id="@+id/am_b_addition"
            android:layout_width="@dimen/b_largeur"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/am_addition"
            android:padding="@dimen/interieur"
            android:layout_margin="@dimen/exterieur"
            />

        <Button
            android:id="@+id/am_b_soustraction"
            android:layout_width="@dimen/b_largeur"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/am_soustraction"
            android:padding="@dimen/interieur"
            android:layout_margin="@dimen/exterieur"
            />

        <Button
            android:id="@+id/am_b_multiplication"
            android:layout_width="@dimen/b_largeur"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/am_multiplication"
            android:padding="@dimen/interieur"
            android:layout_margin="@dimen/exterieur"
            />

        <Button
            android:id="@+id/am_b_division"
            android:layout_width="@dimen/b_largeur"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/am_division"
            android:padding="@dimen/interieur"
            android:layout_margin="@dimen/exterieur"
            />


    </LinearLayout>

</RelativeLayout>
