<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="isauze.ma_super_appli_scolaire.Accueil">

    <LinearLayout
        android:id="@+id/a_accueil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:id="@+id/a_texte_accueil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:text="@string/a_bienvenue"
            android:padding="@dimen/interieur"
            android:layout_margin="@dimen/exterieur"
            />

        <Button
            android:id="@+id/a_bouton_nouv_compte"
            android:layout_width="@dimen/b_largeur"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/a_creer_compte"
            android:padding="@dimen/interieur"
            android:layout_margin="@dimen/exterieur"
            />

        <TextView
            android:id="@+id/a_choix"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:text="@string/a_choix_compte"
            android:padding="@dimen/interieur"
            android:layout_margin="@dimen/exterieur"
            />

        <ListView
            android:id="@+id/a_liste"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
        </ListView>

        <Button
            android:id="@+id/a_liste_ex"
            android:layout_width="@dimen/b_largeur"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/b_exercices"
            android:padding="@dimen/interieur"
            android:layout_margin="@dimen/exterieur"
            />
    </LinearLayout>


</android.support.constraint.ConstraintLayout>
