<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="isauze.ma_super_appli_scolaire.soustraction_2"
    android:background="@drawable/mulan_f">

    <LinearLayout
        android:id="@+id/s2_soustraction_2"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="0dp"
        android:layout_centerInParent="true"
        >

        <TextView
            android:id="@+id/s2_texte"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:text="@string/ad_consigne"
            android:padding="@dimen/interieur"
            android:layout_margin="@dimen/exterieur"
            />

        <TextView
            android:id="@+id/s2_resultat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:text=""
            android:padding="@dimen/interieur"
            android:layout_margin="@dimen/exterieur"
            />

        <Button
            android:id="@+id/s2_accueil"
            android:layout_width="@dimen/b_largeur"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/b_accueil"
            android:padding="@dimen/interieur"
            android:layout_margin="@dimen/exterieur"
            />

        <Button
            android:id="@+id/s2_liste_maths"
            android:layout_width="@dimen/b_largeur"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/l_mathematiques"
            android:padding="@dimen/interieur"
            android:layout_margin="@dimen/exterieur"
            />

        <Button
            android:id="@+id/s2_liste_ex"
            android:layout_width="@dimen/b_largeur"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/b_exercices"
            android:padding="@dimen/interieur"
            android:layout_margin="@dimen/exterieur"
            />
    </LinearLayout>

</RelativeLayout>
