<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="isauze.ma_super_appli_scolaire.creer_compte"
    android:background="@drawable/mulan_f">

    <LinearLayout
        android:id="@+id/c_creer_compte"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="0dp"
        android:layout_centerInParent="true">

        <EditText
            android:id="@+id/c_champ_prenom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:hint="@string/c_prenom"
            android:padding="@dimen/interieur"
            android:layout_margin="@dimen/exterieur"
            />

        <EditText
            android:id="@+id/c_champ_nom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:hint="@string/c_nom"
            android:padding="@dimen/interieur"
            android:layout_margin="@dimen/exterieur"
            />


        <TextView
            android:id="@+id/c_avatar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:text="@string/c_avatar_choix"
            android:padding="@dimen/interieur"
            android:layout_margin="@dimen/exterieur"
            />

        <!-- Liste des images des avatars -->

        <LinearLayout
            android:id="@+id/c_liste_avatars"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            >

            <ImageView
                android:id="@+id/c_bebe_gnou"
                android:layout_width="@dimen/dimension_avatar"
                android:layout_height="@dimen/dimension_avatar"
                android:layout_gravity="center"
                android:padding="@dimen/interieur"
                android:layout_margin="@dimen/exterieur"
                android:src="@drawable/bebe_gnou"
                />

            <ImageView
                android:id="@+id/c_gnou_duo"
                android:layout_width="@dimen/dimension_avatar"
                android:layout_height="@dimen/dimension_avatar"
                android:layout_gravity="center"
                android:padding="@dimen/interieur"
                android:layout_margin="@dimen/exterieur"
                android:src="@drawable/gnou_duo"
                />

            <ImageView
                android:id="@+id/c_gnou_meditant"
                android:layout_width="@dimen/dimension_avatar"
                android:layout_height="@dimen/dimension_avatar"
                android:layout_gravity="center"
                android:padding="@dimen/interieur"
                android:layout_margin="@dimen/exterieur"
                android:src="@drawable/gnou_meditant"
                />

        </LinearLayout>


        <Button
            android:id="@+id/c_bouton_valider"
            android:layout_width="@dimen/b_largeur"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/b_valider"
            android:padding="@dimen/interieur"
            android:layout_margin="@dimen/exterieur"
            />

    </LinearLayout>

</RelativeLayout>
