<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="isauze.ma_super_appli_scolaire.culture_generale">

    <LinearLayout
        android:id="@+id/g_accueil"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:id="@+id/g_texte_accueil_ac"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:text=""
            android:padding="@dimen/interieur"
            android:layout_margin="@dimen/exterieur"
            />

        <TextView
            android:id="@+id/g_alerte"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:text=""
            android:padding="@dimen/interieur"
            android:layout_margin="@dimen/exterieur"
            />

        <RadioGroup
            android:id="@+id/g_groupe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/interieur"
            android:layout_margin="@dimen/exterieur">

            <RadioButton
                android:id="@+id/g_radio1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="@dimen/interieur"
                android:layout_margin="@dimen/exterieur"
                />
            <RadioButton
                android:id="@+id/g_radio2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="@dimen/interieur"
                android:layout_margin="@dimen/exterieur"
                />
            <RadioButton
                android:id="@+id/g_radio3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="@dimen/interieur"
                android:layout_margin="@dimen/exterieur"
                />
        </RadioGroup>

        <Button
            android:id="@+id/g_valider"
            android:layout_width="@dimen/b_largeur"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/b_valider"
            android:padding="@dimen/interieur"
            android:layout_margin="@dimen/exterieur"
            />

        <Button
            android:id="@+id/g_exercice"
            android:layout_width="@dimen/b_largeur"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/b_exercices"
            android:padding="@dimen/interieur"
            android:layout_margin="@dimen/exterieur"
            />

        <Button
            android:id="@+id/g_b_accueil"
            android:layout_width="@dimen/b_largeur"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/b_accueil"
            android:padding="@dimen/interieur"
            android:layout_margin="@dimen/exterieur"
            />

        </LinearLayout>

</android.support.constraint.ConstraintLayout>
